--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "dependencies": {
     "@smartwallet/sdk": "^1.1.0",
     "@truffle/hdwallet-provider": "1.0.26",
+    "async": "^3.2.0",
     "bip39": "3.0.2",
+    "bn.js": "^5.1.1",
+    "ethereumjs-block": "^2.2.2",
+    "ethereumjs-blockchain": "^4.0.3",
+    "ethereumjs-common": "^1.5.0",
     "ethereumjs-tx": "2.1.1",
+    "ethereumjs-vm": "^4.1.3",
     "ethereumjs-wallet": "0.6.3",
-    "ethers": "4.0.40",
+    "ethers": "^4.0.45",
+    "level": "^6.0.1",
+    "rlp": "^2.2.4",
     "solc": "0.5.13",
     "truffle": "5.1.3",
-    "web3": "1.2.4"
+    "web3": "1.2.4",
+    "yargs": "^15.1.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1",
