--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "crypto-playground",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "pretty": "prettier \"scripts/**/*.js\" \"scripts/**/*.json\" \"contracts/**/*.sol\" \"data/**/*.json\" --write",
+    "pretty-abi": "prettier --parser json \"contracts/**/*.abi\" --write"
+  },
   "dependencies": {
     "@smartwallet/sdk": "^1.1.0",
     "@truffle/hdwallet-provider": "1.0.26",
@@ -17,13 +21,13 @@
     "ethers": "^4.0.45",
     "level": "^6.0.1",
     "rlp": "^2.2.4",
-    "solc": "0.5.13",
+    "solc": "^0.8.3",
     "truffle": "5.1.3",
     "web3": "1.2.4",
     "yargs": "^15.1.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "prettier-plugin-solidity": "^1.0.0-alpha.36"
+    "prettier": "*",
+    "prettier-plugin-solidity": "^1.0.0-beta.6"
   }
 }
