--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pretty-abi": "prettier --parser json \"contracts/**/*.abi\" --write"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.0.0",
     "@smartwallet/sdk": "^1.1.0",
     "@truffle/hdwallet-provider": "1.0.26",
     "async": "^3.2.0",
@@ -23,11 +24,13 @@
     "rlp": "^2.2.4",
     "solc": "^0.8.3",
     "truffle": "5.1.3",
+    "truffle-flattener": "^1.5.0",
     "web3": "1.2.4",
     "yargs": "^15.1.0"
   },
   "devDependencies": {
     "prettier": "*",
-    "prettier-plugin-solidity": "^1.0.0-beta.6"
+    "prettier-plugin-solidity": "^1.0.0-beta.6",
+    "solhint": "^3.3.4"
   }
 }
