--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "pretty": "prettier \"scripts/**/*.js\" \"scripts/**/*.json\" \"contracts/**/*.sol\" \"data/**/*.json\" --write",
+    "pretty": "prettier \"scripts/**/*.js\" \"scripts/**/*.json\" \"contracts/**/*.sol\" --write",
     "pretty-abi": "prettier --parser json \"compiled/**/*.json\" --write"
   },
   "dependencies": {
