--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "async": "3.2.0",
     "aws-sdk": "2.1004.0",
     "bip39": "3.0.2",
+    "bitcoinjs-lib": "5.2.0",
     "bn.js": "5.1.1",
+    "ecpair": "1.0.1",
     "ethereumjs-block": "2.2.2",
     "ethereumjs-blockchain": "4.0.3",
     "ethereumjs-common": "1.5.0",
