--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "solc": "0.8.9",
     "truffle": "5.1.3",
     "truffle-flattener": "1.5.0",
+    "ts-node": "^10.4.0",
     "web3": "1.2.4",
     "yargs": "15.1.0"
   },
