--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "pretty": "prettier \"scripts/**/*.js\" \"scripts/**/*.json\" \"scripts/**/*.ts\" \"contracts/**/*.sol\" --write",
-    "pretty-abi": "prettier --parser json \"compiled/**/*.json\" --write"
+    "pretty-abi": "prettier --parser json \"compiled/**/*.json\" --write",
+    "test": "mocha --exit --recursive",
+    "build": "truffle compile"
   },
   "dependencies": {
     "@ethereumjs/common": "2.5.0",
     "@ethereumjs/tx": "3.3.2",
-    "@openzeppelin/contracts": "4.0.0",
+    "@openzeppelin/contracts": "4.3.2",
     "@rumblefishdev/eth-signer-kms": "github:jim-lake/eth-signer-kms#af7b541c0a0ee0c8a74a68158469178ef1a191bd",
     "@smartwallet/sdk": "1.1.0",
     "@truffle/hdwallet-provider": "1.0.26",
@@ -30,15 +32,19 @@
     "level": "6.0.1",
     "rlp": "2.2.4",
     "solc": "0.8.9",
-    "truffle": "5.1.3",
-    "truffle-flattener": "1.5.0",
     "ts-node": "^10.4.0",
     "web3": "1.2.4",
     "yargs": "15.1.0"
   },
   "devDependencies": {
+    "@openzeppelin/test-environment": "0.1.9",
+    "@openzeppelin/test-helpers": "0.5.15",
+    "chai": "4.3.4",
+    "mocha": "9.1.3",
     "prettier": "2.3.1",
     "prettier-plugin-solidity": "1.0.0-beta.13",
-    "solhint": "3.3.4"
+    "solhint": "3.3.4",
+    "truffle": "5.4.18",
+    "truffle-flattener": "1.5.0"
   }
 }
