--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ethereumjs/common": "2.5.0",
     "@ethereumjs/tx": "3.3.2",
     "@openzeppelin/contracts": "4.4.2",
+    "@poanet/solidity-flattener": "^3.0.6",
     "@rumblefishdev/eth-signer-kms": "github:jim-lake/eth-signer-kms#af7b541c0a0ee0c8a74a68158469178ef1a191bd",
     "@smartwallet/sdk": "1.1.0",
     "@truffle/hdwallet-provider": "1.0.26",
