--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@ethereumjs/common": "2.5.0",
     "@ethereumjs/tx": "3.3.2",
     "@openzeppelin/contracts": "4.4.2",
-    "@poanet/solidity-flattener": "^3.0.6",
     "@rumblefishdev/eth-signer-kms": "github:jim-lake/eth-signer-kms#af7b541c0a0ee0c8a74a68158469178ef1a191bd",
     "@smartwallet/sdk": "1.1.0",
     "@truffle/hdwallet-provider": "1.0.26",
@@ -22,7 +21,7 @@
     "bip39": "3.0.2",
     "bitcoinjs-lib": "5.2.0",
     "bn.js": "5.1.1",
-    "cashaddrjs": "^0.4.4",
+    "cashaddrjs": "0.4.4",
     "ecpair": "1.0.1",
     "ethereumjs-block": "2.2.2",
     "ethereumjs-blockchain": "4.0.3",
@@ -33,8 +32,8 @@
     "ethers": "5.4.7",
     "level": "6.0.1",
     "rlp": "2.2.4",
-    "solc": "0.8.9",
-    "ts-node": "^10.4.0",
+    "solc": "0.8.13",
+    "ts-node": "10.4.0",
     "web3": "1.2.4",
     "yargs": "15.1.0"
   },
